--- a/nginx-phpfpm/nginx-persistence/conf/vhosts/default.conf
+++ b/nginx-phpfpm/nginx-persistence/conf/vhosts/default.conf
@@ -2,7 +2,7 @@ server {
     listen 0.0.0.0:80;
     server_name docker.dev;
 
-    root /app/html;
+    root /app;
     index index.php;
 
     location / {
